# medassistance

./: README.md  pyproject.toml
hack4syria_medai/: crew.py  main.py
hack4syria_medai/config/: agents.yaml  tasks.yaml
output/: 1.translated_text_ar.md  2.privacy_check_output.md  3.information_gathering_output.md  4.initial_diagnosis_output.md  5.cardiac_consultation_output.md  6.medical_validation_output.md  7.final_report_en.md  8.final_report_ar.md
